-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.6.2, 6.7.1
-
None
-
-
df6f856e3 (130-based), 2bf3ef389 (134-based), 7806795ac (134-based-refactor)
g++ 9.3.0-1ubuntu2
When try to compile Qt on Ubuntu20.04 got next error
c+: error: unrecognized command line option ‘-std=gnu20’; did you mean ‘-std=gnu+2a’?
but for openSUSE 15.5 x86_64
GCC 9 is supported
https://doc.qt.io/qt-6/linux.html
[5/31379] CXX obj/third_party/abseil-cpp/absl/base/spinlock_wait/spinlock_wait.o[K 16:18:15 [31mFAILED: [0mobj/third_party/abseil-cpp/absl/base/spinlock_wait/spinlock_wait.o 16:18:15 /usr/bin/c++ -MMD -MF obj/third_party/abseil-cpp/absl/base/spinlock_wait/spinlock_wait.o.d -DUSE_UDEV -DUSE_AURA=1 -DUSE_OZONE=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DNO_UNWIND_TABLES -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DABSL_ALLOCATOR_NOTHROW=1 -Igen -I../../../3rdparty/chromium -I../../../3rdparty/chromium/third_party/abseil-cpp -fno-ident -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -Wno-unknown-pragmas -Wno-address -Wno-parentheses -Wno-sign-compare -Wno-stringop-overflow -Wno-stringop-overread -Wno-psabi -Wno-multichar -Wno-format-zero-length -fno-unwind-tables -fno-asynchronous-unwind-tables -fPIC -pipe -pthread -m64 -msse3 -O2 -fdata-sections -ffunction-sections -fno-omit-frame-pointer -g0 -fvisibility=hidden -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-comments -Wno-packed-not-aligned -Wno-dangling-else -Wno-missing-field-initializers -Wno-unused-parameter -Wno-psabi -Wno-deprecated-copy -Wno-expansion-to-defined -std=gnu++20 -fno-exceptions -fno-rtti -fvisibility-inlines-hidden -Wno-narrowing -Wno-class-memaccess -Wno-attributes -Wno-class-memaccess -Wno-subobject-linkage -Wno-invalid-offsetof -Wno-return-type -Wno-deprecated-copy -c ../../../3rdparty/chromium/third_party/abseil-cpp/absl/base/internal/spinlock_wait.cc -o obj/third_party/abseil-cpp/absl/base/spinlock_wait/spinlock_wait.o 16:18:15 c++: error: unrecognized command line option ‘-std=gnu++20’; did you mean ‘-std=gnu++2a’? 16:18:15 [6/31379] CXX obj/base/third_party/double_conversion/double_conversion/bignum-dtoa.o[K 16:18:15 [31mFAILED: [0mobj/base/third_party/double_conversion/double_conversion/bignum-dtoa.o 16:18:15 /usr/bin/c++ -MMD -MF obj/base/third_party/double_conversion/double_conversion/bignum-dtoa.o.d -DUSE_UDEV -DUSE_AURA=1 -DUSE_OZONE=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DNO_UNWIND_TABLES -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -Igen -I../../../3rdparty/chromium -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-comments -Wno-packed-not-aligned -Wno-dangling-else -Wno-missing-field-initializers -Wno-unused-parameter -Wno-psabi -fno-ident -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -Wno-unknown-pragmas -Wno-address -Wno-parentheses -Wno-sign-compare -Wno-stringop-overflow -Wno-stringop-overread -Wno-psabi -Wno-multichar -Wno-format-zero-length -fno-unwind-tables -fno-asynchronous-unwind-tables -fPIC -pipe -pthread -m64 -msse3 -O2 -fdata-sections -ffunction-sections -fno-omit-frame-pointer -g0 -fvisibility=hidden -Wno-unused-const-variable -Wno-unused-function -Wno-narrowing -Wno-class-memaccess -Wno-attributes -Wno-class-memaccess -Wno-subobject-linkage -Wno-invalid-offsetof -Wno-return-type -Wno-deprecated-copy -Wno-deprecated-copy -Wno-expansion-to-defined -std=gnu++20 -fno-exceptions -fno-rtti -fvisibility-inlines-hidden -c ../../../3rdparty/chromium/base/third_party/double_conversion/double-conversion/bignum-dtoa.cc -o obj/base/third_party/double_conversion/double_conversion/bignum-dtoa.o 16:18:15 c++: error: unrecognized command line option ‘-std=gnu++20’; did you mean ‘-std=gnu++2a’?
- relates to
-
QTBUG-130790 error: 'cortex-a53' does not support feature 'crc'
-
- Closed
-