[qtpdf][gcc-9] Gcc 9 compile support

The first version of this patchset supported
gcc-9 compilation for 6.7 / 118-based for qtwebenigne
and qtpdf, however it never made it as it required
ci updates and for 6.7.3 changes were not accepted.

With 6.8 gcc-9 support for qtwebengine was decided to
be dropped for good due to poor concepts support in gcc-9

However qpdf can be still compiled by gcc-9.

Add is_gcc_legacy build conf to cover the case.

Task-number: QTBUG-126247
Change-Id: I08b18d9dc5e7dccc191145b8c74f15dffaaaf062
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/572014
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/656896